automation/gitops/openshift-lightspeed-troubleshooting/templates/service-mesh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-mesh
  labels:
    purpose: eval-test
