automation/gitops/openshift-lightspeed-troubleshooting/templates/service-mesh/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: service-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      containers:
      - name: backend
        image: nginxinc/nginx-unprivileged:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: service-mesh
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
